--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "engines": {
-     "node": "v22.14.0"
+    "node": "v22.14.0"
   },
   "name": "wanderlust",
   "version": "1.0.0",
@@ -14,6 +14,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "20": "^3.1.9",
     "@types/method-override": "^3.0.0",
     "cloudinary": "^1.41.3",
     "connect-flash": "^0.1.1",
@@ -27,6 +28,7 @@
     "joi": "^17.13.3",
     "method-override": "^3.0.0",
     "module": "^1.2.5",
+    "mongodb": "^6.17.0",
     "mongoose": "^8.15.0",
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
