--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^8.15.0",
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^7.0.5",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0"
